--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -82,7 +82,7 @@
           <input name="KLE-switch"
                   id="kle-switch"
                   type="checkbox"
-                  class="upload">Enable classification
+                  class="upload">{% trans "Enable classification (slower)" %}
           </input>
 
           <h2>{% trans "Rule to execute" %}</h2>
