[#61157] Make time of org synchronization configurable

--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_update.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_update.html
@@ -100,6 +100,15 @@
           </div>
         </div>
 
+        <div class="form__row--sync">
+          <span class="form__row__title">{% trans "Synchronization settings" %}</span>
+
+          <div class="form__row__item">
+            <label for="{{ form.synchronization_hour.id_for_label }}">{{ form.synchronization_hour.label }}</label>
+            {{ form.synchronization_hour }}
+          </div>
+        </div>
+
         <div class="form__row--outlook">
           <span class="form__row__title">{% trans "Microsoft Tenant Settings" %}</span>
  
