--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -76,6 +76,7 @@
                  type="text"
                  class="upload"
                  spellcheck="true"
+                 placeholder="..."
                  maxlength="2000"> 
           </textarea>
           <br><br>
