--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/filters.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/filters.html
@@ -15,141 +15,157 @@
     <input type="hidden" name="order_by" id="order_by" value="{{ order_by }}" />
     <input type="hidden" name="order" id="order" value="{{ order }}" />
 
-    <div>
-      <div class="match_filtering_wrapper">
+    <div class="filtering-UI__wrapper">
+      <div class="filtering-UI__body">
         <div>
-          <button type="button"
-                  class="match_filtering_clear_button"
-                  name="clear_scannerjob"
-                  hx-trigger="click"
-                  hx-get="{{ request.path }}"
-                  hx-swap="outerHTML"
-                  hx-target=".content"
-                  hx-select=".content"
-                  hx-include="[id='filter_form'], [id='dropdown_options']"
-                  hx-params="not scannerjob"
-                  hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
-          <label for="scannerjobs" class="match_filtering_label">{% trans "Scan" %}</label>
-        </div>
-        <div class="match_filtering dropdown">
-          <select name="scannerjob" id="scannerjobs" autocomplete="off">
-            <option value="all"
-                    {% if scannerjobs|last == "all" %}selected="selected"{% endif %}>
-              {% trans "All scannerjobs" %}
-            </option>
-            {% for scan in scannerjobs|first %}
-              <option value="{{ scan.scanner_job_pk|unlocalize }}"
-                      {% if request.GET.scannerjob == scan.scanner_job_pk|stringformat:"i" %}selected="selected"{% endif %}>
-                {{ scan.scanner_job_name }} ({{ scan.filtered_total }})
-              </option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
+          <div class="dropdown__wrapper">
+            <div class="dropdown__label">
+              <label for="scannerjobs" class="match_filtering_label">{% trans "Scan" %}</label>
  
-      <div id="sensitivity_filter"
-           class="match_filtering_wrapper"
-           {% if request.GET.sensitivity_checkbox == on %}hidden{% endif %}>
-        <div>
-          <button type="button"
-                  class="match_filtering_clear_button"
-                  name="clear_sensitivities"
-                  hx-trigger="click"
-                  hx-get="{{ request.path }}"
-                  hx-swap="outerHTML"
-                  hx-target=".content"
-                  hx-select=".content"
-                  hx-include="[id='filter_form'], [id='dropdown_options']"
-                  hx-params="not sensitivities"
-                  hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
-          <label for="sensitivities" class="match_filtering_label">{% trans "Sensitivity" %}</label>
-        </div>
-        <div class="match_filtering dropdown">
-          <select name="sensitivities" id="sensitivities" autocomplete="off">
-            <option value="all"
-                    {% if sensitivities|last == "all" %}selected="selected"{% endif %}>
-              {% trans "All sensitivities" %}
-            </option>
-            {% for sensitivity in sensitivities|first %}
-              <option value="{{ sensitivity.0.value|stringformat:"i" }}"
-                      {% if sensitivities|last == sensitivity.0.value|stringformat:"i" %}selected="selected"{% endif %}>
-                {{ sensitivity.0.presentation }}
-                ({{ sensitivity.1 }})
-              </option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
+              <button type="button"
+                      class="match_filtering_clear_button"
+                      name="clear_scannerjob"
+                      hx-trigger="click"
+                      hx-get="{{ request.path }}"
+                      hx-swap="outerHTML"
+                      hx-target=".content"
+                      hx-select=".content"
+                      hx-include="[id='filter_form'], [id='dropdown_options']"
+                      hx-params="not scannerjob"
+                      hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
+            </div>
  
-      <div id="source_type_filter"
-           class="match_filtering_wrapper"
-           {% if request.GET.source_type_checkbox == on %}hidden{% endif %}>
-        <div>
-          <button type="button"
-                  class="match_filtering_clear_button"
-                  name="clear_source_type"
-                  hx-trigger="click"
-                  hx-get="{{ request.path }}"
-                  hx-swap="outerHTML"
-                  hx-target=".content"
-                  hx-select=".content"
-                  hx-include="[id='filter_form'], [id='dropdown_options']"
-                  hx-params="not source_type"
-                  hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
-          <label for="source-types" class="match_filtering_label">{% trans "Source Type" %}</label>
-        </div>
-        <div class="match_filtering dropdown">
-          <select name="source_type" id="source_type" autocomplete="off">
-            <option value="all"
-                    {% if source_types|last == "all" %}selected="selected"{% endif %}>
-              {% trans "All source types" %}
-            </option>
-            {% for source_type in source_types|first %}
-              <option value="{{ source_type.source_type }}"
-                      {% if request.GET.source_type == source_type.source_type %}selected="selected"{% endif %}>
-                {% find_scan_type source_type.source_type %}
-                ({{ source_type.total }})
-              </option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
- 
-      {% if "/archive"  in request.path %}
-        <div class="match_filtering_wrapper">
-          <div>
-            <button type="button"
-                    class="match_filtering_clear_button"
-                    name="clear_resolution_status"
-                    hx-trigger="click"
-                    hx-get="{{ request.path }}"
-                    hx-swap="outerHTML"
-                    hx-target=".content"
-                    hx-select=".content"
-                    hx-include="[id='filter_form'], [id='dropdown_options']"
-                    hx-params="not resolution_status"
-                    hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
-            <label for="resolution_status" class="match_filtering_label">{% trans "Resolution Status" %}</label>
-          </div>
-          <div class="match_filtering dropdown">
-            <select name="resolution_status" id="resolution_status" autocomplete="off">
-              <option value="all"
-                      {% if resolution_status|last == "all" %}selected="selected"{% endif %}>
-                {% trans "All resolution statuses" %}
-              </option>
-              {% for method in resolution_status|first %}
-                <option value="{{ method.resolution_status|stringformat:'i' }}"
-                        {% if resolution_status|last == method.resolution_status|stringformat:"i" %}selected="selected"{% endif %}>
-                  {{ method.resolution_label }} ({{ method.total }})
+            <div class="match_filtering dropdown">
+              <select name="scannerjob" id="scannerjobs" autocomplete="off">
+                <option value="all"
+                        {% if scannerjobs|last == "all" %}selected="selected"{% endif %}>
+                  {% trans "All scannerjobs" %}
                 </option>
-              {% endfor %}
-            </select>
+ 
+                {% for scan in scannerjobs|first %}
+                  <option value="{{ scan.scanner_job_pk|unlocalize }}"
+                          {% if request.GET.scannerjob == scan.scanner_job_pk|stringformat:"i" %}selected="selected"{% endif %}>
+                    {{ scan.scanner_job_name }} ({{ scan.filtered_total }})
+                  </option>
+                {% endfor %}
+              </select>
+            </div>
           </div>
         </div>
-      {% endif %}
+ 
+        <div id="source_type_filter">
+          <div class="dropdown__wrapper">
+            <div class="dropdown__label">
+              <label for="source-types" class="match_filtering_label">{% trans "Source Type" %}</label>
+ 
+              <button type="button"
+                      class="match_filtering_clear_button"
+                      name="clear_source_type"
+                      hx-trigger="click"
+                      hx-get="{{ request.path }}"
+                      hx-swap="outerHTML"
+                      hx-target=".content"
+                      hx-select=".content"
+                      hx-include="[id='filter_form'], [id='dropdown_options']"
+                      hx-params="not source_type"
+                      hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
+            </div>
+ 
+            <div class="match_filtering dropdown">
+              <select name="source_type" id="source_type" autocomplete="off">
+                <option value="all"
+                        {% if source_types|last == "all" %}selected="selected"{% endif %}>
+                  {% trans "All source types" %}
+                </option>
+ 
+                {% for source_type in source_types|first %}
+                  <option value="{{ source_type.source_type }}"
+                          {% if request.GET.source_type == source_type.source_type %}selected="selected"{% endif %}>
+                    {% find_scan_type source_type.source_type %}
+                    ({{ source_type.total }})
+                  </option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+ 
+        {% if "/archive"  in request.path %}
+          <div>
+            <div class="dropdown__wrapper">
+              <div class="dropdown__label">
+                <label for="resolution_status" class="match_filtering_label">{% trans "Resolution Status" %}</label>
+ 
+                <button type="button"
+                        class="match_filtering_clear_button"
+                        name="clear_resolution_status"
+                        hx-trigger="click"
+                        hx-get="{{ request.path }}"
+                        hx-swap="outerHTML"
+                        hx-target=".content"
+                        hx-select=".content"
+                        hx-include="[id='filter_form'], [id='dropdown_options']"
+                        hx-params="not resolution_status"
+                        hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
+              </div>
+ 
+              <div class="match_filtering dropdown">
+                <select name="resolution_status" id="resolution_status" autocomplete="off">
+                  <option value="all"
+                          {% if resolution_status|last == "all" %}selected="selected"{% endif %}>
+                    {% trans "All resolution statuses" %}
+                  </option>
+ 
+                  {% for method in resolution_status|first %}
+                    <option value="{{ method.resolution_status|stringformat:'i' }}"
+                            {% if resolution_status|last == method.resolution_status|stringformat:"i" %}selected="selected"{% endif %}>
+                      {{ method.resolution_label }} ({{ method.total }})
+                    </option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+ 
+        <div id="sensitivity_filter"
+             {% if request.GET.sensitivity_checkbox == on %}hidden{% endif %}>
+          <div class="dropdown__wrapper">
+            <div class="dropdown__label">
+              <label for="sensitivities" class="match_filtering_label">{% trans "Sensitivity" %}</label>
+ 
+              <button type="button"
+                      class="match_filtering_clear_button"
+                      name="clear_sensitivities"
+                      hx-trigger="click"
+                      hx-get="{{ request.path }}"
+                      hx-swap="outerHTML"
+                      hx-target=".content"
+                      hx-select=".content"
+                      hx-include="[id='filter_form'], [id='dropdown_options']"
+                      hx-params="not sensitivities"
+                      hx-indicator="#report-page-indicator">{% trans "Clear" %}</button>
+            </div>
 
-      <div class="match_filtering_wrapper">
-        <div class="match_filtering report_filter_toggle_button">
+            <div class="match_filtering dropdown">
+              <select name="sensitivities" id="sensitivities" autocomplete="off">
+                <option value="all"
+                        {% if sensitivities|last == "all" %}selected="selected"{% endif %}>
+                  {% trans "All sensitivities" %}
+                </option>
+                {% for sensitivity in sensitivities|first %}
+                  <option value="{{ sensitivity.0.value|stringformat:"i" }}"
+                          {% if sensitivities|last == sensitivity.0.value|stringformat:"i" %}selected="selected"{% endif %}>
+                    {{ sensitivity.0.presentation }}
+                    ({{ sensitivity.1 }})
+                  </option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+ 
+        <div>
           <div class="report_filter_toggle_button">
             <button class="filter-button filter-button--report expand"
                     type="button"
@@ -158,11 +174,12 @@
                 <use xlink:href="/static/svg/symbol-defs.svg#icon-funnel"></use>
               </svg>
             </button>
+
             <div id="report_filter_toggle_options"
                  class="filter-container"
                  style="display: none">
               <div class="filter-container-options filter-container-options--report">
-                <ul>
+                <ul class="report">
                   <div class="filter_checkbox">
                     <input name="sensitivity_checkbox"
                            type="checkbox"
@@ -175,36 +192,23 @@
                             onclick="toggleCheckbox(event, 'sensitivity_checkbox')">
                     </div>
                   </ul>
-                  <ul>
-                    <div class="filter_checkbox">
-                      <input name="source_type_checkbox"
-                             type="checkbox"
-                             id="source_type_checkbox"
-                             autocomplete="off"
-                             {% if request.GET.source_type_checkbox %}checked{% endif %}>
-                      <label for="source_type_checkbox">{% trans "source type"|capfirst %}</label>
-                      <button class="checkbox_button"
-                              id="source_type_checkbox_button"
-                              onclick="toggleCheckbox(event, 'source_type_checkbox')">
-                      </div>
-                    </ul>
-                    <ul>
-                      <button class="button--cta button"
-                              onclick="hideOptions('report_filter_toggle_options')">Vis</button>
-                    </ul>
-                  </div>
+
+                  <ul class="report">
+                    <button class="button--cta button"
+                            onclick="hideOptions('report_filter_toggle_options')">Vis</button>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-        <div class="checkbox_wrapper">
-          <div class="checkbox-group">
+ 
+        <div class="filtering-UI__footer">
+          <div class="checkbox_wrapper checkbox-group">
             <div class="ds-checkbox">
               {% comment %}
-          We use the hidden input field below to track whether 30-days is enabled or not.
-          If we used the checkbox, unticking it would make it disappear from the form's GET action
+              We use the hidden input field below to track whether 30-days is enabled or not.
+              If we used the checkbox, unticking it would make it disappear from the form's GET action
               {% endcomment %}
               <input type="hidden" id="30-days" name="30-days" value="{{ 30_days }}">
               <input type="checkbox"
@@ -214,16 +218,12 @@
                      {% if 30_days == "true" %}checked{% endif %}>
               <label for="30-days-toggle">{% trans "Include results, that are less than 30 days old" %}</label>
             </div>
-          </div>
-        </div>
 
-        {% if view.type == "personal" %}
-          <div class="checkbox_wrapper">
-            <div class="checkbox-group">
+            {% if view.type == "personal" %}
               <div class="ds-checkbox">
                 {% comment %}
-            We use the hidden input field below to track whether 30-days is enabled or not.
-            If we used the checkbox, unticking it would make it disappear from the form's GET action
+                We use the hidden input field below to track whether 30-days is enabled or not.
+                If we used the checkbox, unticking it would make it disappear from the form's GET action
                 {% endcomment %}
                 <input type="hidden"
                        id="include-shared"
@@ -236,8 +236,10 @@
                        {% if include_shared == "true" %}checked{% endif %}>
                 <label for="include-shared-toggle">{% trans "Include results from shared mailboxes" %}</label>
               </div>
-            </div>
+            {% endif %}
           </div>
-        {% endif %}
-      </form>
-    </div>
+ 
+        </div>
+      </div>
+    </form>
+  </div>
