--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -15,6 +15,45 @@
   max-width: 100%;
 }
 
+.filtering-UI {
+  &__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 2.5rem;
+  }
+  &__body {
+    display: flex;
+    gap: 1.25rem;
+    align-items: flex-end;
+
+    .dropdown {
+      &__wrapper {
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      &__label {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+  }
+
+  &__footer {
+    .checkbox-group {
+      flex-direction: column;
+      gap: 1rem;
+      margin: 0;
+    }
+  }
+}
+
 /* style checkbox */
 .checkbox_wrapper {
   float: left;
@@ -26,8 +65,8 @@
 
 .match_filtering_clear_button {
   cursor: pointer;
-  float: right;
-  margin-right: 2rem;
+  // float: right;
+  // margin-right: 2rem;
   border: none;
   background: none;
   color: var(--color-primary-dark);
@@ -42,15 +81,15 @@
 
 .match_filtering {
   width: 12.5rem;
-  margin-right: 2rem;
-  margin-top: 2rem;
-  font-size: .9rem;
+  // margin-right: 2rem;
+  // margin-top: 2rem;
+  font-size: 0.9rem;
 
   &.report_filter_toggle_button {
     width: fit-content;
     margin-right: 2rem;
     margin-top: 2rem;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 }
 
@@ -58,7 +97,7 @@
   width: 20rem;
   margin-right: 2rem;
   margin-top: 2rem;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .org_filtering_wrapper {
@@ -72,16 +111,16 @@
   display: flex;
   align-items: center;
 
-  >div {
+  > div {
     margin: 1rem;
   }
 }
 
 .orgunit_input_container {
   width: 100%;
-  display: flex; 
-  justify-content: space-around; 
-  align-items: center; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .orgunit_input_wrapper {
@@ -127,14 +166,13 @@
     }
   }
 
-  input+label {
+  input + label {
     cursor: pointer;
     padding-left: 1.75em;
     margin-top: 0;
   }
 
-  input[type="checkbox"]+label {
-
+  input[type="checkbox"] + label {
     &::before,
     &::after {
       :root {
@@ -170,19 +208,19 @@
     }
   }
 
-  input[type=checkbox]:focus+label::before {
+  input[type="checkbox"]:focus + label::before {
     border-color: #12496e;
   }
 
   &:hover {
-    input[type="checkbox"]+label {
+    input[type="checkbox"] + label {
       &::before {
         border-color: #12496e;
       }
     }
   }
 
-  input[type="checkbox"]:checked+label {
+  input[type="checkbox"]:checked + label {
     &::before {
       background-color: #12496e;
       border-color: transparent;
@@ -193,7 +231,7 @@
     }
   }
 
-  input[type="checkbox"]:disabled+label {
+  input[type="checkbox"]:disabled + label {
     opacity: 0.5;
 
     &::before {
@@ -206,7 +244,7 @@
   display: flex;
   align-items: center;
 
-  >div {
+  > div {
     margin: 1rem;
   }
 }
@@ -215,13 +253,12 @@
   display: flex;
   align-items: center;
 
-  >div {
+  > div {
     margin: 1rem;
   }
 }
 
 .search_field_wrapper {
-
   width: 20rem;
   max-width: 100%;
 
@@ -235,21 +272,20 @@
 
   width: 20rem;
 
-  input[type=search] {
+  input[type="search"] {
     background-color: var(--color-widget-bg);
     border: none !important;
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
     font-size: 1rem;
     outline: none;
-    padding: .75rem 2.25rem .75rem .75rem;
+    padding: 0.75rem 2.25rem 0.75rem 0.75rem;
     transition: var(--transition-default);
     width: 100%;
   }
 
-  &+select#distribute-to {
+  & + select#distribute-to {
     margin-top: -1px;
   }
-
 }
 
 span.text-highlight {
