--- a/src/os2datascanner/projects/report/reportapp/templates/components/common/banner.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/common/banner.html
@@ -1,11 +1,13 @@
 <header class="banner" role="banner">
   {% include "components/common/logo.html" %}
 
-  <section class="banner_menu"
-           id="banner_menu"
-           aria-labelledby="navigation-toggle">
-    {% include "components/navigation/navigation.html" %}
-  </section>
+  {% if request.user.is_authenticated %}
+    <section class="banner_menu"
+             id="banner_menu"
+             aria-labelledby="navigation-toggle">
+      {% include "components/navigation/navigation.html" %}
+    </section>
+  {% endif %}
 
   {% if request.user.account.organization.show_support_button %}
     <section class="service_menu" id="service_menu">
@@ -21,8 +23,8 @@
 
   {% if request.user.is_authenticated %}
     {% include "components/user/user_corner_menu.html" %}
+    <button id="navigation-toggle" aria-haspopup="true" aria-controls="sidemenu">
+      <span class="screen-reader-only">Menu</span>
+    </button>
   {% endif %}
-  <button id="navigation-toggle" aria-haspopup="true" aria-controls="sidemenu">
-    <span class="screen-reader-only">Menu</span>
-  </button>
 </header>
