[#61157] Use TimeField instead of PositiveIntergerField
Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: (Alec|Alexander) Faithfull <af@magenta-aps.dk>

--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_update.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_update.html
@@ -104,8 +104,8 @@
           <span class="form__row__title">{% trans "Synchronization settings" %}</span>
 
           <div class="form__row__item">
-            <label for="{{ form.synchronization_hour.id_for_label }}">{{ form.synchronization_hour.label }}</label>
-            {{ form.synchronization_hour }}
+            <label for="{{ form.synchronization_time.id_for_label }}">{{ form.synchronization_time.label }}</label>
+            {{ form.synchronization_time }}
           </div>
         </div>
 
