[#61817] Refactor result-page templates
[#61817] Translations

--- a/src/os2datascanner/projects/report/reportapp/templates/components/common/scripts.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/common/scripts.html
@@ -11,5 +11,4 @@
   <script src="{% static 'js/reports/distributeElement.js' %}"></script>
   <script src="{% static 'js/modals/snackBars.js' %}"></script>
   <script src="{% static 'js/modals/popover.js' %}"></script>
-
-{% endblock %}
+{% endblock scripts %}
