--- a/src/os2datascanner/projects/report/reportapp/templates/index.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/index.html
@@ -1,24 +1,65 @@
-{%  load i18n %}
+{% extends "components/common/base.html" %}
+
+{% load i18n %}
 {% load static %}
-{% include "components/common/header.html" %}
-{% include "components/common/banner.html" %}
 
-<main class="wrapper">
+{% block body %}
 
-  <meta name="htmx-config"
-        content='{"historyEnabled": "false", "historyCacheSize": "0"}'>
-  <div class="content"
-       hx-push-url="true"
-       hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+  <main class="wrapper">
 
-    {% include "components/navigation/index_navigation.html" %}
+    <meta name="htmx-config"
+          content='{"historyEnabled": "false", "historyCacheSize": "0"}'>
+    <div class="content"
+         hx-push-url="true"
+         hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
-    {% include "content.html" %}
+      {% include "components/navigation/index_navigation.html" %}
 
-  </div>
+      {# the loading-circle #}
+      <svg class="page-indicator"
+           id="report-page-indicator"
+           viewbox="0 0 100 100">
+        <circle id="circle" cx="50" cy="50" r="45"></circle>
+      </svg>
+ 
+      <div class="content-header">
+        {% block content-header %}
+          {% comment %}
+          The "content-header"-block is used for stuff, which is supposed to 
+          come before datatables. This block is formatted with side-margins
+          on small screens, among other stylings.
+          {% endcomment %}
+        {% endblock content-header %}
+      </div>
 
-</main>
+      {% block content %}
+        {% comment %}
+        Everythings not inside the "content-header"-block has no side-margins
+        on small screens. This is primarily intended for datatables.
+        {% endcomment %}
+      {% endblock content %}
 
-{% include "components/common/scripts.html" %}
-</body>
-</html>
+      {# Snackbar for popup messages #}
+      <div class="message-popup-area">
+ 
+        {% for message in messages %}
+          <div class="message-popup ">
+            {{ message }}
+            <button type="button"
+                    onclick="closeOldSnackBar(this)"
+                    class="close-modal button button--modal-close"
+                    title="Close">
+              <svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                <path d="m31.708 25.708-9.708-9.708 9.708-9.708c0.105-0.105 0.18-0.227 0.229-0.357 0.133-0.356 0.057-0.771-0.229-1.057l-4.586-4.586c-0.286-0.286-0.702-0.361-1.057-0.229-0.13 0.048-0.252 0.124-0.357 0.228l-9.708 9.708-9.708-9.708c-0.105-0.104-0.227-0.18-0.357-0.228-0.356-0.133-0.771-0.057-1.057 0.229l-4.586 4.586c-0.286 0.286-0.361 0.702-0.229 1.057 0.049 0.13 0.124 0.252 0.229 0.357l9.708 9.708-9.708 9.708c-0.104 0.105-0.18 0.227-0.229 0.357-0.133 0.355-0.057 0.771 0.229 1.057l4.586 4.586c0.286 0.286 0.702 0.361 1.057 0.229 0.13-0.049 0.252-0.124 0.357-0.229l9.708-9.708 9.708 9.708c0.105 0.105 0.227 0.18 0.357 0.229 0.356 0.133 0.771 0.057 1.057-0.229l4.586-4.586c0.286-0.286 0.362-0.702 0.229-1.057-0.049-0.13-0.124-0.252-0.229-0.357z">
+                </path>
+              </svg>
+            </button>
+          </div>
+        {% endfor %}
+      </div>
+
+    </div>
+
+  </main>
+
+{% endblock body %}
