--- a/src/os2datascanner/projects/report/reportapp/templates/statistics.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/statistics.html
@@ -1,30 +1,28 @@
+{% extends "components/common/base.html" %}
+
 {% load static %}
 
-{% include "components/common/header.html" %}
-{% include "components/common/banner.html" %}
-
-<body>
-  <main class="wrapper">
-    {% if request.path == "/statistics/dpo/" %}
-      {% include "components/statistics/dpo_statistics_template.html" %}
-    {% elif request.path == "/statistics/leader/" %}
-      {% include "components/statistics/leader_statistics_template.html" %}
-    {% elif "/statistics/user/" in request.path %}
-      {% include "components/statistics/user_overview_template.html" %}
-    {% endif %}
-  </main>
-</body>
+{% block body %}
+  <body>
+    <main class="wrapper">
+      {% if request.path == "/statistics/dpo/" %}
+        {% include "components/statistics/dpo_statistics_template.html" %}
+      {% elif request.path == "/statistics/leader/" %}
+        {% include "components/statistics/leader_statistics_template.html" %}
+      {% elif "/statistics/user/" in request.path %}
+        {% include "components/statistics/user_overview_template.html" %}
+      {% endif %}
+    </main>
+  </body>
+{% endblock body %}
 
 {% block scripts %}
+  {{ block.super }}
   <script src="{% url 'jsi18n' %}"></script>
-  <script src="{% static '3rdparty/htmx.min.js' %}"></script>
-  <script src="{% static 'js/filters/options.js' %}"></script>
-  <script src="{% static '3rdparty/jquery-3.6.0.min.js' %} "></script>
   <script src="{% static '3rdparty/chart-4.0.1.min.js' %}"></script>
   <script src="{% static '3rdparty/chartjs-plugin-datalabels.min.js' %}"></script>
   <script src="{% static '3rdparty/hammerjs.min.js' %}"></script>
   <script src="{% static '3rdparty/chartjs-plugin-zoom.min.js' %}"></script>
-  <script src="{% static 'js/tables/tableBehavior.js' %}"></script>
   {% if request.path == "/statistics/dpo/" %}
     <script src="{% static 'js/charts/chartHelpers.js' %}"></script>
   {% elif request.path == "/statistics/leader/" %}
@@ -35,9 +33,9 @@
   <script src="{% static 'js/charts/lineCharts.js' %}"></script>
   <script src="{% static 'js/charts/userCharts.js' %}"></script>
   <script src="{% static 'js/charts/barCharts.js' %}"></script>
-  <script src="{% static 'js/modals/popover.js' %}"></script>
+{% endblock scripts %}
+
+{% block additional_styles %}
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
-
-{% endblock %}
+{% endblock additional_styles %}
