--- a/src/os2datascanner/projects/report/reportapp/templates/index.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/index.html
@@ -27,7 +27,7 @@
 
       {% block content %}
         {% comment %}
-        Everythings not inside the "content-header"-block has no side-margins
+        Everything not inside the "content-header"-block has no side-margins
         on small screens. This is primarily intended for datatables.
         {% endcomment %}
       {% endblock content %}
