--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
@@ -150,28 +150,15 @@
                             <!-- djlint:off -->{{ manager_pos.account.get_full_name }}</li><!-- djlint:on -->
                           {% endfor %}
                           <li class="add_manager">
-                            <button type="button" class="add_button button button--icon-button">
+                            <button type="button"
+                                    class="add_button button button--icon-button"
+                                    hx-get="{% url 'manager-dropdown' organization.slug orgunit.pk %}"
+                                    hx-swap="outerHTML"
+                                    hx-target="this"
+                                    hx-push-url="false">
                               <i id="person_add_alt_1" class="material-icons">person_add_alt_1</i>
                             </button>
-                            <select class="select_options"
-                                    name="add-manager"
-                                    hidden
-                                    hx-post=""
-                                    hx-swap="outerHTML"
-                                    hx-target="#orgunit__{{ orgunit.pk }}"
-                                    hx-select="#orgunit__{{ orgunit.pk }}"
-                                    hx-trigger="change"
-                                    hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
-                              <option value="">{% trans "Choose new manager" %}</option>
-                              {% for account in accounts %}
-                                <option value="{{ account.uuid }}">
-                                  {{ account.get_full_name }}
-                                  {% if account.username %}({{ account.username }}){% endif %}
-                                </option>
-                              {% endfor %}
-                            </select>
                           </li>
-
                         </ul>
                       </td>
                       <td class="datatable__column--dpos orgunit_managers">
@@ -190,26 +177,14 @@
                             </li>
                           {% endfor %}
                           <li class="add_dpo">
-                            <button type="button" class="add_button button button--icon-button">
+                            <button type="button"
+                                    class="add_button button button--icon-button"
+                                    hx-get="{% url 'dpo-dropdown' organization.slug orgunit.pk %}"
+                                    hx-swap="outerHTML"
+                                    hx-target="this"
+                                    hx-push-url="false">
                               <i id="person_add_alt_1" class="material-icons">person_add_alt_1</i>
                             </button>
-                            <select class="select_options"
-                                    name="add-dpo"
-                                    hidden
-                                    hx-post=""
-                                    hx-swap="outerHTML"
-                                    hx-target="#orgunit__{{ orgunit.pk }}"
-                                    hx-select="#orgunit__{{ orgunit.pk }}"
-                                    hx-trigger="change"
-                                    hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
-                              <option value="">{% trans "Choose new DPO" %}</option>
-                              {% for account in accounts %}
-                                <option value="{{ account.uuid }}">
-                                  {{ account.get_full_name }}
-                                  {% if account.username %}({{ account.username }}){% endif %}
-                                </option>
-                              {% endfor %}
-                            </select>
                           </li>
                         </ul>
                       </td>
