[#61231] Up-tidying, a lil client validation and new addresses

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/admin_widgets/rule_builder.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/admin_widgets/rule_builder.html
@@ -122,12 +122,12 @@
     {% trans "Street name exceptions:" %}
     <input type="text"
            id="whitelist"
-           placeholder="{% trans 'Roadway, Wayroad' %}" />
+           placeholder="{% trans 'Electric Avenue, Privet Drive, Downing Street' %}" />
     <br>
     {% trans "Specific address exceptions:" %}
     <input type="text"
            id="whitelist_address"
-           placeholder="{% trans 'Roadway 1, Roadway 10' %}" />
+           placeholder="{% trans 'Electric Avenue 1, Privet Drive 10, Downing Street 100' %}" />
   </span>
   <span id="EmailHeader">
     <input type="text" placeholder="{% trans 'field name' %}" />
