--- a/src/os2datascanner/projects/report/reportapp/templates/components/password/password_change_done.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/password/password_change_done.html
@@ -1,24 +1,11 @@
-{% extends "components/common/base.html" %}
+{% extends "components/common/bannerless.html" %}
 {% load i18n %}
-{% block rendertype %}regular{% endblock %}
-
-{% block title %}
-  {% trans 'Password change successful' %}
-{% endblock %}
-
-{% block body_class %}login-bg{% endblock %}
-
-{% block heading %}
-  {% trans 'Password change successful' %}
-{% endblock %}
 
 {% block body %}
-  <section class="login-card">
-    <p>{% trans 'Your password was changed.' %}</p>
+  <p>{% trans "Your password was changed." %}</p>
 
-    <p>
-      <a href="/accounts/login/">{% trans 'Log in' %}</a>
-    </p>
-    <div class="form__group logo">{% include "components/common/logo-o.html" %}</div>
-  </section>
-{% endblock %}
+  <p>
+    <a href="{% url "login" %}">{% trans "Log in" %}</a>
+  </p>
+  <div class="form__group logo">{% include "components/common/logo-o.html" %}</div>
+{% endblock body %}
