--- a/src/os2datascanner/projects/report/reportapp/templates/components/password/password_reset_done.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/password/password_reset_done.html
@@ -1,22 +1,14 @@
-{% extends 'components/common/base.html' %}
+{% extends "components/common/bannerless.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }}{% endblock %}
-
-{% block body_class %}login-bg{% endblock %}
-
-{% block heading %}<h1>{{ title }}</h1>{% endblock %}
-
 {% block body %}
-  <section class="login-card">
-    <p>
-      {% trans "We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly." %}
-    </p>
+  <p>
+    {% trans "We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly." %}
+  </p>
 
-    <p>
-      {% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}
-    </p>
+  <p>
+    {% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}
+  </p>
 
-    <div class="form__group logo">{% include "components/common/logo-o.html" %}</div>
-  </section>
-{% endblock %}
+  <div class="form__group logo">{% include "components/common/logo-o.html" %}</div>
+{% endblock body %}
