--- a/src/os2datascanner/projects/report/reportapp/templates/components/user/logout.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/user/logout.html
@@ -1,11 +1,8 @@
+{% extends "components/common/bannerless.html" %}
 {% load i18n %}
-{% include "components/common/header.html" %}
 
-<section class="login-card">
+{% block body %}
   <p>{% trans "Thank you for using OSdatascanner." %}</p>
-  <a href="/">{% trans "Log in" %}</a> <span>{% trans "again" %}</span>
+  <a href="{% url "index" %}">{% trans "Log in" %}</a> <span>{% trans "again" %}</span>
   <div class="form__group logo">{% include "components/common/logo-o.html" %}</div>
-</section>
-
-</body>
-</html>
+{% endblock body %}
