[#62121] Move statistics.html to components folder

--- a/src/os2datascanner/projects/report/reportapp/templates/leader_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/leader_statistics_template.html
@@ -1,4 +1,4 @@
-{% extends "statistics.html" %}
+{% extends "components/statistics/statistics.html" %}
 {% load i18n %}
 {% load l10n %}
 {% load static %}
